# whisphub-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: api.rs  config.rs  main.rs  project.rs
src/commands/: init.rs  login.rs  logout.rs  mod.rs  push.rs  whoami.rs
